# Clustering-Movielens

./: Dockerfile  K-Means Clustering of movies.ipynb  README.md  clustering_kmeans.py  docker-compose.yaml  flask_movie_reco.py  helper.py  pyproject.toml  requirements.txt
templates/: user1_embedding.html  user2_embedding.html  user3_embedding.html  user4_embedding.html
