[tool.poetry]
name = "clustering_movies"
version = "0.1.0"
description = ""
authors = ["saussayematthieu50 <saussayematthieu50@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"


pandas = "^1.3.3"
plotly = "^5.3.1"
statsmodels = "^0.12.2"
Flask = "^2.0.2"
Flask_session = "^0.4.0" 
numpy = "^1.19.5"     
scipy = "^1.6.1"      
sklearn = "^0.0"
jupyter = "^1.0.0"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
